--- a/Copy_of_In_class_exercise_03.ipynb
+++ b/Copy_of_In_class_exercise_03.ipynb
@@ -37,6 +37,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "vXAY2y5vc_tN",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "mi86WVKSufc8",
         "colab_type": "text"
       },
@@ -110,10 +120,10 @@
       "metadata": {
         "id": "3LB3VFELt3pO",
         "colab_type": "code",
-        "outputId": "5c3e38d9-3602-4207-aa05-987505772bec",
+        "outputId": "479106f6-6408-4a4c-f7ad-8cab36fa7c5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 107
         }
       },
       "source": [
@@ -128,6 +138,7 @@
         "forecasts=seven_day.findAll('div', attrs = {'class':'tombstone-container'})\n",
         "for forecast in forecasts:\n",
         "  print(forecast.text)\n",
+        "  print(forecast.find('img', attrs = {'class':'forecast-icon'}).get('alt', ''))\n",
         "  break;"
       ],
       "execution_count": 0,
@@ -137,7 +148,8 @@
           "text": [
             "\n",
             "ThisAfternoon\n",
-            "ShowersLikelyHigh: 43 °F\n"
+            "ShowersLikelyHigh: 43 °F\n",
+            "This Afternoon: Showers likely.  Cloudy, with a high near 43. North northeast wind 10 to 15 mph.  Chance of precipitation is 60%. New precipitation amounts of less than a tenth of an inch possible. \n"
           ],
           "name": "stdout"
         }
@@ -166,6 +178,19 @@
         "desc_df= pd.DataFrame(desc, columns = ['desc'])\n",
         "data=pd.concat([period_df,short_desc_df,temp_df,desc_df],axis=1)\n",
         "data.to_csv('output.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lQAYqim5cKP9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
