--- a/Copy_of_In_class_exercise_05.ipynb
+++ b/Copy_of_In_class_exercise_05.ipynb
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "XvR_O9D8sOUY",
         "colab_type": "code",
-        "outputId": "9757cea8-0193-42bc-81bf-b3c2dc316c27",
+        "outputId": "63a5acee-fb85-4759-ddb0-a1e84b728136",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
@@ -159,7 +159,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "2Cjk-nXv44HJ",
         "colab_type": "code",
-        "outputId": "a578187b-90f3-4582-fad0-2036d36e6cd9",
+        "outputId": "67fc2e64-2ef7-40f7-94b7-f2d66c6524bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -177,7 +177,7 @@
       "source": [
         "data=''\n",
         "for i in titles_df['Titles']:\n",
-        "  data=data+'.'+i\n",
+        "  data=data+' '+i\n",
         "data"
       ],
       "execution_count": 0,
@@ -186,13 +186,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\".Principles of data mining.Privacy-preserving data mining.Data mining: concepts and techniques.Data preparation for data mining.Untangling text data mining.Data mining applications in healthcare.Relational data mining.Data warehousing, data mining, and OLAP.Data mining with big data.Discovering knowledge in data: an introduction to data mining.Top 10 algorithms in data mining.The WEKA data mining software: an update.Data mining and knowledge discovery handbook.From data mining to knowledge discovery in databases.Data mining: practical machine learning tools and techniques with Java implementations.A survey of clustering data mining techniques.Introduction to data mining.Privacy preserving data mining.Uniqueness of medical data mining.Mastering data mining: The art and science of customer relationship management.Predictive data mining: a practical guide.Data mining: an overview from a database perspective.Data mining for education.Geographic data mining and knowledge discovery.Data mining: Introductory and advanced topics.Data mining techniques.Data mining and knowledge discovery.Data mining: the textbook.Information visualization and visual data mining.Advanced data mining techniques.The data warehouse and data mining.Data mining approaches for intrusion detection.Data mining with an ant colony optimization algorithm.Exploratory data mining and data cleaning.The top ten algorithms in data mining.Data mining: a tutorial-based primer.Automatic subspace clustering of high dimensional data for data mining applications.Principles of data mining.Data mining with decision trees: theory and applications.Towards parameter-free data mining.Educational data mining: A survey from 1995 to 2005.Feature selection for knowledge discovery and data mining.Data mining in bioinformatics using Weka.Data mining: concepts, models, methods, and algorithms.Tools for privacy preserving distributed data mining.E cient and E ective clustering methods for spatial data mining.A review on time series data mining.What is Data Mining.SLIQ: A fast scalable classifier for data mining.Mining graph data.Introduction to business data mining.Data mining in education.The elements of statistical learning: data mining, inference, and prediction.Data preparation for data mining.Graph-based data mining.Data mining for imbalanced datasets: An overview.Secure multiparty computation for privacy preserving data mining.Knowledge Discovery and Data Mining: Towards a Unifying Framework..Orange: data mining toolbox in Python.Mining of massive datasets.Data Mining: Concepts, models and techniques.Handbook of educational data mining.Information visualization in data mining and knowledge discovery.Mining educational data to analyze students' performance.Bayesian networks for data mining.Data mining and analysis: fundamental concepts and algorithms.Data mining methods and models.Data mining of user navigation patterns.Machine learning and data mining.Yale: Rapid prototyping for complex data mining tasks.State-of-the-art in privacy preserving data mining.Data mining techniques: for marketing, sales, and customer relationship management.Data mining with R: learning with case studies.Temporal data mining.Data mining techniques for customer relationship management.Trajectory data mining: an overview.Learning analytics and educational data mining: towards communication and collaboration.STING: A statistical information grid approach to spatial data mining.Data mining for web personalization.Interestingness measures for data mining: A survey.Data mining: a knowledge discovery approach.Effective data mining using neural networks.SPRINT: A scalable parallel classifier for data mining.Educational data mining: a review of the state of the art.Data mining: statistics and more?.Privacy preserving data mining..Educational data mining and learning analytics.Spatial clustering methods in data mining.Research issues in web data mining.Privacy preserving association rule mining in vertically partitioned data.Keel data-mining software tool: data set repository, integration of algorithms and experimental analysis framework..Feature extraction, construction and selection: A data mining perspective.Data preprocessing in data mining.Data mining and knowledge discovery with evolutionary algorithms.Mining text data.Data mining methods for detection of new malicious executables.Knowledge management and data mining for marketing.Applied data mining: statistical methods for business and industry.A data mining framework for building intrusion detection models.From visual data exploration to visual data mining: A survey\""
+              "\" Principles of data mining Privacy-preserving data mining Data mining: concepts and techniques Data preparation for data mining Untangling text data mining Data mining applications in healthcare Relational data mining Data warehousing, data mining, and OLAP Data mining with big data Discovering knowledge in data: an introduction to data mining Top 10 algorithms in data mining The WEKA data mining software: an update Data mining and knowledge discovery handbook From data mining to knowledge discovery in databases Data mining: practical machine learning tools and techniques with Java implementations A survey of clustering data mining techniques Introduction to data mining Privacy preserving data mining Uniqueness of medical data mining Mastering data mining: The art and science of customer relationship management Predictive data mining: a practical guide Data mining: an overview from a database perspective Data mining for education Geographic data mining and knowledge discovery Data mining: Introductory and advanced topics Data mining techniques Data mining and knowledge discovery Data mining: the textbook Information visualization and visual data mining Advanced data mining techniques The data warehouse and data mining Data mining approaches for intrusion detection Data mining with an ant colony optimization algorithm Exploratory data mining and data cleaning The top ten algorithms in data mining Data mining: a tutorial-based primer Automatic subspace clustering of high dimensional data for data mining applications Principles of data mining Data mining with decision trees: theory and applications Towards parameter-free data mining Educational data mining: A survey from 1995 to 2005 Feature selection for knowledge discovery and data mining Data mining in bioinformatics using Weka Data mining: concepts, models, methods, and algorithms Tools for privacy preserving distributed data mining E cient and E ective clustering methods for spatial data mining A review on time series data mining What is Data Mining SLIQ: A fast scalable classifier for data mining Mining graph data Introduction to business data mining Data mining in education The elements of statistical learning: data mining, inference, and prediction Data preparation for data mining Graph-based data mining Data mining for imbalanced datasets: An overview Secure multiparty computation for privacy preserving data mining Knowledge Discovery and Data Mining: Towards a Unifying Framework. Orange: data mining toolbox in Python Mining of massive datasets Data Mining: Concepts, models and techniques Handbook of educational data mining Information visualization in data mining and knowledge discovery Mining educational data to analyze students' performance Bayesian networks for data mining Data mining and analysis: fundamental concepts and algorithms Data mining methods and models Data mining of user navigation patterns Machine learning and data mining Yale: Rapid prototyping for complex data mining tasks State-of-the-art in privacy preserving data mining Data mining techniques: for marketing, sales, and customer relationship management Data mining with R: learning with case studies Temporal data mining Data mining techniques for customer relationship management Trajectory data mining: an overview Learning analytics and educational data mining: towards communication and collaboration STING: A statistical information grid approach to spatial data mining Data mining for web personalization Interestingness measures for data mining: A survey Data mining: a knowledge discovery approach Effective data mining using neural networks SPRINT: A scalable parallel classifier for data mining Educational data mining: a review of the state of the art Data mining: statistics and more? Privacy preserving data mining. Educational data mining and learning analytics Spatial clustering methods in data mining Research issues in web data mining Privacy preserving association rule mining in vertically partitioned data Keel data-mining software tool: data set repository, integration of algorithms and experimental analysis framework. Feature extraction, construction and selection: A data mining perspective Data preprocessing in data mining Data mining and knowledge discovery with evolutionary algorithms Mining text data Data mining methods for detection of new malicious executables Knowledge management and data mining for marketing Applied data mining: statistical methods for business and industry A data mining framework for building intrusion detection models From visual data exploration to visual data mining: A survey\""
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -241,10 +241,10 @@
       "metadata": {
         "id": "br3ZQxb2Gkm9",
         "colab_type": "code",
-        "outputId": "47515e85-deeb-420c-8835-549553940244",
+        "outputId": "3f226e24-f8be-48e4-d84f-4d5548209310",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
+          "height": 650
         }
       },
       "source": [
@@ -265,14 +265,14 @@
         "           {\"TEXT\": {\"REGEX\": \"^(D|d)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(M|m)\\w+$\"}}]\n",
         "  pattern_5 = [{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(M|m)ethod\\w+$\"}}]\n",
         "  pattern_6 = [{\"TEXT\": {\"REGEX\": \"^(D|d)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(M|m)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(A|a)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(I|i)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}}]\n",
-        "\n",
+        "  pattern_7 = [{\"TEXT\": {\"REGEX\": \"^(D|d)\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^(M|m)\\w+$\"}},{'IS_PUNCT': True, 'OP': '+'},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}},{\"TEXT\": {\"REGEX\": \"^\\w+$\"}}]\n",
         "  matcher.add('Imp_Topics_1', None,pattern_2)\n",
         "  matcher.add('application', None,pattern_1)\n",
         "  matcher.add('Imp_Topics_2', None,pattern_3)\n",
         "  matcher.add('issues', None,pattern_4)\n",
         "  matcher.add('methods', None,pattern_5)\n",
         "  matcher.add('methods', None,pattern_6)\n",
-        "  \n",
+        "  matcher.add('methods', None,pattern_7)\n",
         "  matches = matcher(nlp_doc)\n",
         "  for match_id, start, end in matches:\n",
         "    span = nlp_doc[start:end]\n",
@@ -282,15 +282,15 @@
         "for i in results:\n",
         "  if i=='and data mining' or i=='and Data Mining':\n",
         "    results.remove(i)\n",
-        "print('Applications,Important topics,Issues->')\n",
+        "print('Applications,Important topics,Issues,methods->')\n",
         "results"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Applications,Important topics,Issues->\n"
+            "Applications,Important topics,Issues,methods->\n"
           ],
           "name": "stdout"
         },
@@ -298,28 +298,47 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Data mining applications in healthcare',\n",
+              "['Data mining: concepts and techniques Data preparation for',\n",
+              " 'Data mining applications in healthcare',\n",
+              " 'data mining, and OLAP Data mining with big',\n",
+              " 'Data mining: practical machine learning tools and techniques',\n",
+              " 'data mining: The art and science of customer',\n",
+              " 'Data mining: an overview from a database perspective',\n",
+              " 'Data mining: Introductory and advanced topics Data mining',\n",
+              " 'Data mining: the textbook Information visualization and visual',\n",
+              " 'data mining Advanced data mining',\n",
               " 'Advanced data mining',\n",
               " 'data warehouse and data mining',\n",
+              " 'data mining: A survey from 1995 to 2005',\n",
               " 'knowledge discovery and data mining',\n",
               " 'Data mining in bioinformatics',\n",
               " 'clustering methods',\n",
               " 'Data mining in education',\n",
               " 'Knowledge Discovery and Data Mining',\n",
+              " 'concepts and algorithms Data mining',\n",
+              " 'algorithms Data mining',\n",
               " 'mining methods',\n",
               " 'Machine learning and data mining',\n",
+              " 'data mining: an overview Learning analytics and educational',\n",
+              " 'Data mining: a knowledge discovery approach Effective data',\n",
+              " 'data mining: a review of the state of',\n",
+              " 'of the art Data mining',\n",
+              " 'art Data mining',\n",
+              " 'data mining. Educational data mining and learning analytics',\n",
               " 'clustering methods',\n",
               " 'Research issues in web data mining',\n",
               " 'mining methods',\n",
               " 'Knowledge management and data mining',\n",
+              " 'for marketing Applied data mining',\n",
               " 'Applied data mining',\n",
-              " 'statistical methods']"
+              " 'statistical methods',\n",
+              " 'data mining: statistical methods for business and industry']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 16
         }
       ]
     },
